--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,12 +12,16 @@ setw -g mouse on
 set-option -g default-terminal screen-256color
 bind-key p paste-buffer
 
-set-option -g default-command 'reattach-to-user-namespace -l /usr/local/bin/bash'
-
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+if-shell "test expr '$OSTYPE' : 'darwin.*' > /dev/null" \
+  bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" \
+  bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy" \
+  set-option -g default-command 'reattach-to-user-namespace -l $SHELL'
+
+if-shell "test expr '$OSTYPE' : 'linux*' > /dev/null" \
+  bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"
 
 ## COLORSCHEME: gruvbox dark
 set-option -g status "on"
