動作確認を行った

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,12 +16,12 @@ bind-key p paste-buffer
 setw -g mode-keys vi
 
 if-shell "test expr '$OSTYPE' : 'darwin.*' > /dev/null" \
-  bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" \
+  'bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" \
   bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy" \
-  set-option -g default-command 'reattach-to-user-namespace -l $SHELL'
+  set-option -g default-command "reattach-to-user-namespace -l $SHELL"'
 
 if-shell "test expr '$OSTYPE' : 'linux*' > /dev/null" \
-  bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"
+  'bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"'
 
 ## COLORSCHEME: gruvbox dark
 set-option -g status "on"
