linuxでtmuxでコピーした時にクリップボードに反映されないのを修正した

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,7 @@ if-shell "test expr '$OSTYPE' : 'darwin.*' > /dev/null" \
   bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy" \
   set-option -g default-command "reattach-to-user-namespace -l $SHELL"'
 
-if-shell "test expr '$OSTYPE' : 'linux*' > /dev/null" \
-  'bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"'
+if-shell "uname | grep -q Linux" 'bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"'
 
 ## COLORSCHEME: gruvbox dark
 set-option -g status "on"
