--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,8 @@ bind | split-window -h
 # - でペインを横に分割する
 bind - split-window -v
 setw -g mouse on
-set-option -g default-terminal screen-256color
+set-option -g default-terminal xterm-256color
+set -ga terminal-overrides ",xterm-256color:Tc"
 bind-key p paste-buffer
 
 # Use vim keybindings in copy mode
