--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,11 +16,7 @@ bind-key p paste-buffer
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-if-shell "test expr '$OSTYPE' : 'darwin.*' > /dev/null" \
-  'bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" \
-  bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy" \
-  set-option -g default-command "reattach-to-user-namespace -l $SHELL"'
-
+if-shell "uname | grep -q Darwin" "source-file ~/dotfiles/.tmux-darwin.conf" ""
 if-shell "uname | grep -q Linux" 'bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"'
 
 ## COLORSCHEME: gruvbox dark
