add some changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ bind-key p paste-buffer
 setw -g mode-keys vi
 
 if-shell "uname | grep -q Darwin" "source-file ~/dotfiles/.tmux-darwin.conf" ""
-if-shell "uname | grep -q Linux" 'bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"'
+if-shell "uname | grep -q Linux" 'bind-key -Tcopy-mode-vi Enter send -X copy-pipe-and-cancel "cat | xsel -i --clipboard"'
 
 ## COLORSCHEME: gruvbox dark
 set-option -g status "on"
