--- a/.tmux-linux.conf
+++ b/.tmux-linux.conf
@@ -1,1 +1,3 @@
-bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
+
