--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
 	co = checkout
 	sandbox = ! ! git checkout sandbox && git checkout -b sandbox develop && echo "created new branch 'sandbox'"
 	sandbox-reset = !git sandbox || git reset --hard develop
+	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
 [url "https://"]
 	insteadOf = git://
 [http]
