powerlineのパスをpipから取得するように修正

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,5 +21,6 @@ if-shell "uname | grep -q Darwin" "source-file ~/dotfiles/.tmux-darwin.conf" ""
 if-shell "uname | grep -q Linux" "source-file ~/dotfiles/.tmux-linux.conf"
 
 run-shell "powerline-daemon -q"
-source "$HOME/.local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+run-shell 'tmux setenv -g POWERLINE_STATUS_DIR $(pip3 show powerline-status | grep "Location:" | cut -d":" -f2)'
 
+source "$POWERLINE_STATUS_DIR/powerline/bindings/tmux/powerline.conf"
