--- a/.tmux-darwin.conf
+++ b/.tmux-darwin.conf
@@ -1,3 +1,3 @@
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 set-option -g default-command 'reattach-to-user-namespace -l $SHELL'
