--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,4 @@ if-shell "uname | grep -q Darwin" "source-file ~/dotfiles/.tmux-darwin.conf" ""
 if-shell "uname | grep -q Linux" "source-file ~/dotfiles/.tmux-linux.conf"
 
 run-shell "powerline-daemon -q"
-run-shell 'tmux setenv -g POWERLINE_STATUS_DIR $(pip3 show powerline-status | grep "Location:" | cut -d":" -f2)'
-
-source "$POWERLINE_STATUS_DIR/powerline/bindings/tmux/powerline.conf"
+run-shell 'powerline-config tmux setup'
