I'm no longer using rxvt-unicode

--- a/.inputrc
+++ b/.inputrc
@@ -9,3 +9,4 @@ set menu-complete-display-prefix on
 set mark-directories on
 set mark-symlinked-directories on
 TAB: menu-complete
+set bell-style none
