tmuxで画面分割する時，カレントディレクトリで開くようにした

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,10 @@ unbind C-p
 set -sg escape-time 1
 
 # | でペインを縦に分割する
-bind | split-window -h
+bind | split-window -c "#{pane_current_path}" -h
 
 # - でペインを横に分割する
-bind - split-window -v
+bind - split-window -c "#{pane_current_path}" -v
 setw -g mouse on
 set-option -g default-terminal xterm-256color
 set -ga terminal-overrides ",xterm-256color:Tc"
