--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,4 +21,4 @@ if-shell "uname | grep -q Darwin" "source-file ~/dotfiles/.tmux-darwin.conf" ""
 if-shell "uname | grep -q Linux" "source-file ~/dotfiles/.tmux-linux.conf"
 
 run-shell "powerline-daemon -q"
-run-shell 'powerline-config tmux setup'
+run-shell "powerline-config tmux setup"
