fix powerline invocation line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,5 +20,5 @@ if-shell "uname | grep -q Darwin" "source-file ~/dotfiles/.tmux-darwin.conf" ""
 # if-shell "uname | grep -q Linux" 'bind-key -Tcopy-mode-vi Enter send -X copy-pipe-and-cancel "cat | xsel -i --clipboard"'
 if-shell "uname | grep -q Linux" "source-file ~/dotfiles/.tmux-linux.conf"
 
-run-shell "powerline-daemon -q"
-run-shell "powerline-config tmux setup"
+run-shell "$HOME/.local/bin/powerline-daemon -q"
+run-shell "$HOME/.local/bin/powerline-config tmux setup"
