gitのエイリアスを追加

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,8 @@
   p = push
   cm = commit
   st = status
-	co = checkout
+  co = checkout
+  cl = clone
 	sandbox = ! ! git checkout sandbox && git checkout -b sandbox develop && echo "created new branch 'sandbox'"
 	sandbox-reset = !git sandbox || git reset --hard develop
 	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
