--- a/.tmux-darwin.conf
+++ b/.tmux-darwin.conf
@@ -1,3 +1,5 @@
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 set-option -g default-command 'reattach-to-user-namespace -l $SHELL'
+run-shell "powerline-daemon -q"
+run-shell "powerline-config tmux setup"
