--- a/.tmux-linux.conf
+++ b/.tmux-linux.conf
@@ -1,3 +1,4 @@
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
-
+run-shell "$HOME/.local/bin/powerline-daemon -q"
+run-shell "$HOME/.local/bin/powerline-config tmux setup"
