--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
   co = checkout
   cl = clone
   ps = push
+  pl = pull
 	sandbox = ! ! git checkout sandbox && git checkout -b sandbox develop && echo "created new branch 'sandbox'"
 	sandbox-reset = !git sandbox || git reset --hard develop
 	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
